...
    android:layout_height="match_parent"
    android:background="#32F8C6FD"
    tools:context=".activity.DirectionActivity">


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/next_btn"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="#9C6EDD"
        android:paddingStart="0dp"
...
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/pre_btn"
        app:layout_constraintRight_toRightOf="@id/skip_btn"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/destination_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#FFBB86FC"
...
