<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search_btn"
        android:choiceMode="multipleChoice"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@color/purple_200"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
